Consul-deployment/test.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: config-api
  name: config-api
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: config-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: config-api
  name: config-api
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-api
  template:
    metadata:
      labels:
        app: config-api
      annotations:
        'consul.hashicorp.com/connect-inject': 'true'
    spec:
      serviceAccountName: config-api
      containers:
      - image: jumanakj/arc-configuration:1.0
        name: config-api
        ports:
        - containerPort: 8080
