Consul-deployment/gateway.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: api-gateway
  namespace: consul
spec:
  gatewayClassName: consul
  listeners:
  - protocol: HTTP
    port: 80
    name: https
    allowedRoutes:
      namespaces:
        from: All
    # tls:
    #   certificateRefs:
    #     - name: consul-server-cert
