Consul-deployment/routes.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-route-1
  namespace: default
spec:
  parentRefs:
  - name: api-gateway
    namespace: consul
  rules:
  - matches:
    - path:
        type: RegularExpression
        value: "/.*"
    backendRefs:
    - name: frontend
      kind: Service
  - matches:
    - path:
        type: RegularExpression
        value: "/api/Device/.*"
    backendRefs:
    - name: config-api
      kind: Service                                                                            
  - matches:
    - path:
        type: RegularExpression
        value: "/api/Component/.*"
    backendRefs:
    - name: config-api
  - matches:
    - path:
        type: RegularExpression
        value: "/api/Auth/.*"
    backendRefs:
    - name: auth-api
      kind: Service
